--- a/part3/pb-backend/package.json
+++ b/part3/pb-backend/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "morgan": "^1.10.1",
-    "node": "^25.1.0"
+    "express": "^4.18.2",
+    "morgan": "^1.10.1"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
