--- a/part3/pb-backend/package.json
+++ b/part3/pb-backend/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "mongoose": "^8.19.3",
     "morgan": "^1.10.1"
   },
   "engines": {
